--- a/scripts/V000.md
+++ b/scripts/V000.md
@@ -1,7 +1,11 @@
-Surprise intro?
+- intro.
+
 Lucy: You are online.
+
 ??
+
 Lucy: It's time for the C++ course. You are online.
+
 Oh, thanks Lucy.
 
 - Why C++?
